# render

./: .gitignore  CMakeLists.txt  README.md
include/: camera.hpp  demoobjects.hpp  framebuffer.hpp  i_platformgraphics.hpp  iplatform.hpp  iplatformgraphics.hpp  object.hpp  render.hpp  sdlgraphics.hpp  sdlplatform.hpp  vector.hpp
source/: camera.cpp  framebuffer.cpp  main.cpp  object.cpp  render.cpp  sdlgraphics.cpp  sdlplatform.cpp
test/: test.cpp
